backend/service.yml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  selector:
    app: auth-service
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 4001
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: food-service
spec:
  selector:
    app: food-service
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 4002
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: cart-service
spec:
  selector:
    app: cart-service
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 4004
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
spec:
  selector:
    app: order-service
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 4003
  type: ClusterIP
